# Paper-anonymous-tokens

./: Cargo.toml  README.md  Rocket.toml
benches/: benchmarks.rs
examples/: client.rs  qr_client.rs  qr_client_attacker.rs  qr_serial.rs  server.rs
examples/util/: mod.rs
src/: common.rs  lib.rs
src/atpm_nizkp/: keys.rs  mod.rs  tokens.rs  tokens_batched.rs  util.rs
src/atpm_pairing/: keys.rs  mod.rs  tokens.rs  tokens_batched.rs  util.rs
src/nizkp_curve25519/: keys.rs  mod.rs  tokens.rs  tokens_batched.rs  util.rs
static/: README.md  index.html  index.js  package.json
token-qr/: Cargo.toml  README.md
token-qr/src/: lib.rs
